<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCrop">
    <TextView
        android:id="@+id/splash_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/crop_title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linear_checks"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="left|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/check_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_tea"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/check_rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_rice"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/check_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_coffee"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/check_bpepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_bpepper"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>
    <ImageButton
        android:id="@+id/next_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/circle_shape"
        android:src="@drawable/ic_next"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>