<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/post_splash"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bg_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/splash_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/crop_title"/>
    <LinearLayout
        android:id="@+id/linear_radios"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center|left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_title_2"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/rice_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_rice"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"/>
        <CheckBox
            android:id="@+id/tea_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_tea"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"/>
        <CheckBox
            android:id="@+id/coffee_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_coffee"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"/>
        <CheckBox
            android:id="@+id/bpepper_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crop_bpepper"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:buttonTint="@android:color/white"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/next_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:tint="@android:color/white"
        android:src="@drawable/ic_next"/>
</androidx.constraintlayout.widget.ConstraintLayout>